fixed main header issue because of overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ img {
     background-color : #ffffff;
     border-style : solid;
     border-color : #cccccc;
+    overflow: auto;
 }
 
 h1 {
@@ -23,8 +24,9 @@ h1 {
     border-color : #cccccc;
     float : left;
     font-family : Georgia, 'Times New Roman', Times, serif;
-    padding : 10px 0px;
-    margin : 20px 120px;
+    padding : 20px 0px;
+    margin : 0px 120px;
+    height :100%;
 
 }
 
